# pylibde265

./: .gitattributes  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  README_zh.md  build.py  dyproject.py  example.py  pylibde265-0.0.1a0-cp311-cp311-win_amd64.whl  pylibde265.cp310-win_amd64.pyd  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_exp.txt  requirements_usr.txt  running_example.py  setup.py  tools_build.py  tools_upload.py  tools_upload_test.py
.github/workflows/: doc.txt  pypi.yml  wheels.yml  workflows.yml
example/: 01_basic_decoding.py  02_stream_decoding.py  03_metadata_config.py  04_image_processing.py  05_visualization.py  06_mp4_decoding.py  07_visual_player.py  README.md  example.py  example_visualize.py
multimedia/mindmap/: vedio_steam.drawio
multimedia/ppt/: pylibde265_design.pptx
multimedia/video/: Kinkaku-ji.h265
pylibde265/: pylibde265.c  pylibde265.pxd  pylibde265.pyx
src/pylibde265/: __init__.c  __init__.cp310-win_amd64.pyd  __init__.cp312-win_amd64.pyd  __init__.py  de265.py  de265.pyi  de265.pyx  de265_pybind.cpp  decode.c  decode.cp310-win_amd64.pyd  decode.cp312-win_amd64.pyd  decode.pxd  decode.py  decode.pyx  demuxer.h  image.pxd  minimp4.h  pyde265.c  pyde265.pxd  pyde265.pyi  pyde265.pyx  vedio.py  version.py  visualize.cpp  visualize.pxd  visualize.py  visualize.pyi  visualize.pyx  visualize_pybind.cpp
src/pylibde265/cylibde265/: pylibde265.c  pylibde265.pxd
test/: bench_performance.py  cover.py  test_func.py  test_mp4_decoding.py  test_visualize.py  tester.py  vis_performance.py
trashcan/: e.pyx  setup.py
typing/: de265.pyi  pyde265.pyi
